--- a/styles.css
+++ b/styles.css
@@ -14,9 +14,25 @@ header {
     text-align: center;
 }
 
+.imagelogo {
+  top: margin 80px;
+  margin-right: 150px;
+
+
+  
+  
+
+}
+
+
+ul{
+  margin-bottom: 80px;
+}
+
 nav ul {
     list-style-type: none;
     padding: 0;
+    margin-right: 50px;
 }
 .nav-button {
   color: white;
@@ -26,6 +42,7 @@ nav ul {
   border-radius: 5px;
   transition: background-color 0.3s, transform 0.3s;
   display: inline-block;
+  margin-right: 50px;
 }
 
 nav ul li {
